--- a/hobby_gallery.html
+++ b/hobby_gallery.html
@@ -15,28 +15,28 @@
 
   <main class="gallery">
     <section class="hobby-card">
-      <img src="/photography.webp" alt="Photography">
+      <img src="photography.webp" alt="Photography">
       <h2>Photography</h2>
       <p>Freezing moments in time lets me relive the emotions and colors of life.</p>
       <a href="https://www.nationalgeographic.com/photography" target="_blank">📷 Explore</a>
     </section>
 
     <section class="hobby-card">
-      <img src="/gaming.webp" alt="Gaming">
+      <img src="gaming.webp" alt="Gaming">
       <h2>Gaming</h2>
       <p>Gaming fuels my imagination and tests my problem-solving in fantastic worlds.</p>
       <a href="https://www.riotgames.com/en" target="_blank">🎮 Play</a>
     </section>
 
     <section class="hobby-card">
-      <img src="/guitar.jpeg" alt="Guitar">
+      <img src="guitar.jpeg" alt="Guitar">
       <h2>Playing Guitar</h2>
       <p>Strumming the strings is like therapy. Music connects me to emotions and creativity.</p>
       <a href="https://www.justinguitar.com/guitar-lessons" target="_blank">🎸 Learn</a>
     </section>
 
     <section class="hobby-card">
-      <img src="/cooking.jpeg" alt="Cooking">
+      <img src="cooking.jpeg" alt="Cooking">
       <h2>Cooking</h2>
       <p>I love experimenting with flavors — every dish is a creative journey on a plate!</p>
       <a href="https://pinchofyum.com/" target="_blank">👨‍🍳 Taste</a>
